# CXX_Template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
Core/: Core.cpp
Include/: Core.hpp
Source/: Main.cpp
